# cpp-logging

./: .gitignore  LICENSE  README.md
example/: CMakeLists.txt  TxtFormatter.h  TxtWriter.h  main.cpp
include/: Logging.h
include/src/: Common.h  IRecordFormatter.h  IWriter.h  Record.h
